# gazebo_sfm_plugin

./: CMakeLists.txt  package.xml
config/: circular_open_problem_agents.yaml  world_sfm_agents.yaml
include/gazebo_sfm_plugin/: PedestrianHSFM2Plugin.h  PedestrianHSFMPlugin.h  PedestrianSFM2Plugin.h  PedestrianSFMPlugin.h  VisualizeForcesPlugin.h  WorldSFMPlugin.h  hsfm.hpp  hsfm2.hpp  rkf45.hpp
launch/: cafe_ros2.launch.py  circular_open_problem.launch.py  test_hsfm_near_wall.launch.py  test_rkf45_hsfm_forces_visual.launch.py  world_sfm.launch.py
models/: HSFM.stl  HSFM2.stl  arrow.stl  circular_workspace.dae  global_force.stl  linear_velocity.stl  obstacle_force.stl  walk_yellow.dae
models/pioneer3at/: model.sdf
scripts/: load_agent_params.cpp  save_and_print_forces.py
src/: AttachModelPlugin.cc  PedestrianHSFM2Plugin.cpp  PedestrianHSFMPlugin.cpp  PedestrianSFM2Plugin.cpp  PedestrianSFMPlugin.cpp  VisualizeForcesPlugin.cpp  WorldSFMPlugin.cpp
worlds/: cafe3.world  circular_open_problem.world  save_forces_experiment.world  save_forces_experiment2.world  test_ALL_sfm_forces_visual.world  test_bottleneck_mhsfm.world  test_group_hsfm.world  test_group_hsfm2.world  test_group_sfm.world  test_group_sfm2.world  test_hsfm.world  test_hsfm2.world  test_hsfm2_forces_visual.world  test_hsfm_forces_visual.world  test_hsfm_near_wall.world  test_sfm.world  test_sfm2.world  test_sfm2_forces_visual.world  test_sfm_forces_visual.world  world_sfm.world
